--- a/resources/views/koan.css
+++ b/resources/views/koan.css
@@ -11,6 +11,11 @@
     border: 1px solid var(--vscode-panel-border);
 }
 
+.challenge-block-header {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
 .instruction-cell {
     background: var(--vscode-editor-background);
     color: var(--vscode-editor-foreground);
@@ -27,7 +32,15 @@
     background: var(--vscode-editor-background);
 }
 
-.code-header {
+.code-output {
+    border: 1px solid var(--vscode-panel-border);
+    margin: 1rem 0;
+    border-radius: 4px;
+    background: var(--vscode-editor-background);
+}
+
+
+.code-buttons {
     background: var(--vscode-titleBar-inactiveBackground);
     padding: 0.5rem;
     border-bottom: 1px solid var(--vscode-panel-border);
